deploy/kubernetes/distributed/repository_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: repository
  namespace: alfresco
  labels:
    app: alfresco
    tiers: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alfresco
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alfresco
        tiers: engine
    spec:
      containers:
      - image: fjudith/alfresco:repository
        name: alfresco
        ports:
        - containerPort: 137
          name: netbios-ns
        - containerPort: 138
          name: netbios-dgm
        - containerPort: 139
          name: netbios-ssn
        - containerPort: 21
          name: ftp
        - containerPort: 445
          name: microsoft-ds
        - containerPort: 8080
          name: http-proxy
        volumeMounts:
        - name: alfresco-data
          mountPath: /var/lib/alfresco/alf_data
          subPath: data
        - name: alfresco-data
          mountPath: /usr/share/tomcat/logs
          subPath: log
        livenessProbe:
          tcpSocket:
              port: 8080
          initialDelaySeconds: 60
          timeoutSeconds: 5
        readinessProbe:
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
      volumes:
      - name: alfresco-data
        persistentVolumeClaim:
          claimName: alfresco-data
---
