deploy/kubernetes/distributed/search_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: alfresco
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alfresco
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alfresco
        tiers: search
    spec:
      containers:
      - image: fjudith/alfresco:search
        name: search
        ports:
        - containerPort: 8983
          name: solr-http
        volumeMounts:
        - name: alfresco-search-alfresco
          mountPath: /usr/share/alfresco-search-services/solrhome/alfresco
        - name: alfresco-search-archive
          mountPath: /usr/share/alfresco-search-services/solrhome/archive
        - name: alfresco-search-contentstore
          mountPath: /usr/share/alfresco-search-services/contentstore
      volumes:
      - name: alfresco-search-alfresco
        persistentVolumeClaim:
          claimName: alfresco-search-alfresco
      - name: alfresco-search-archive
        persistentVolumeClaim:
          claimName: alfresco-search-archive
      - name: alfresco-search-contentstore
        persistentVolumeClaim:
          claimName: alfresco-search-contentstore
---
