deploy/kubernetes/distributed/share_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: share
  namespace: alfresco
  labels:
    app: alfresco
    tiers: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alfresco
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: alfresco
        tiers: frontend
    spec:
      containers:
      - image: fjudith/alfresco:share
        name: share
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 8443
          name: https
          protocol: TCP
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          timeoutSeconds: 30
---
