deploy/kubernetes/distributed/libreoffice_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libreoffice
  namespace: alfresco
  labels:
    app: alfresco
    tiers: converter
spec:
  type: ClusterIP
  ports:
  - name: libreoffice
    port: 8100
    targetPort: 8100
    protocol: TCP
  selector:
    app: alfresco
    tiers: converter
  type: ClusterIP
---
