deploy/kubernetes/distributed/repository_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: repository
  namespace: alfresco
  labels:
    app: alfresco
    tiers: engine
spec:
  type: ClusterIP
  ports:
  - name: netbios-ns
    port: 137
    targetPort: 137
    protocol: UDP
  - name: netbios-dgm
    port: 138
    targetPort: 138
    protocol: UDP
  - name: netbios-ssn
    port: 139
    targetPort: 139
    protocol: TCP
  - name: ftp
    port: 21
    targetPort: 21
    protocol: TCP
  - name: microsoft-ds
    port: 445
    targetPort: 445
    protocol: TCP
  - name: http-proxy
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: alfresco
    tiers: engine
---
