deploy/kubernetes/distributed/search_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: alfresco
  labels:
    app: alfresco
    tiers: search
spec:
  type: ClusterIP
  ports:
  - name: solr-http
    port: 8983
    targetPort: 8983
    protocol: TCP
  selector:
    app: alfresco
    tiers: search
---
