deploy/kubernetes/distributed/share_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: share
  namespace: alfresco
  labels:
    app: alfresco
    tiers: frontend
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: alfresco
    tiers: frontend
---
