deploy/kubernetes/distributed/alfresco_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alfresco
  namespace: alfresco
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: JSESSIONID
spec:
  rules:
  - host: alfresco.weavelab.io
    http:
      paths:
      - path: /share
        backend:
          serviceName: share
          servicePort: 8080
      - path: /alfresco
        backend:
          serviceName: repository
          servicePort: 8080
  tls:
  - hosts:
    - alfresco.weavelab.io
    secretName: alfresco-prod-cert
